# gemma

./: .gitignore  02-gemini-api-audio.js  02-gemini-api-test.html  2.finetune_lora.py  3.test_finetuned_model.py  4.save_lora_merged_model.py  5.test_vision.py  5.test_vision_v2.py  7.test_audio_llamacpp.py  LICENSE  README.md  requirements.txt  run_gguf.sh  test_all.py
.github/workflows/: ci.yml  deploy.yml
apps/: deploy_all.sh
apps/examples/: README.md  audio_cpp.sh  finetune_lora.py  merge_and_export.py  multimodal_cpp.sh  multimodal_inference.py  run_all.sh  run_audio.sh  run_audio_cpp.sh  run_finetune.sh  run_gguf.sh  run_merge.sh  run_multimodal.sh  run_test_finetuned.sh  run_text.sh  run_text_cpp.sh  run_vision.sh  run_vision_cpp.sh  run_vision_multi.sh  test_finetuned_model.py  text_cpp.sh  vision_cpp.sh  vision_multi_images.py
apps/gemini_api/: README.md  THOUGHT_SIGNATURE.md  crypto_api.py  gateway.py  server.py  test_api.py  (+3 more)
apps/gemini_api/crypto/: Cargo.toml  README.md  lingkong_client.py  pyproject.toml
apps/gemini_api/crypto/src/: lib.rs
data/: README.md
examples/: 1_text-cpp.sh  1_text_inference.py  2_vision-cpp.sh  2_vision.py  3_audio-cpp.sh  3_audio.py  4_finetune.py  5_test_finetuned.py  6_merge_and_export.py  README.md  run_1_text-cpp.sh  run_1_text.sh  run_2_vision-cpp.sh  run_2_vision.sh  run_3_audio-cpp.sh  run_3_audio.sh  run_4_finetune.sh  run_5_test_finetuned.sh  run_6_merge.sh  run_7_gguf.sh  run_all.sh
scripts/: deploy-to-server.sh  install.sh  quick-install.sh
webui/: api_server.py  run.sh  server.py  test_api.py
(+75 files in other folders)
