[package]
name = "lingkong_crypto"
version = "1.0.0"
edition = "2021"
authors = ["LingKong AI"]
description = "End-to-end encryption library for LingKong AI API"

[lib]
name = "lingkong_crypto"
crate-type = ["cdylib", "rlib"]

[dependencies]
# PyO3 for Python bindings (abi3 for forward compatibility)
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py39"] }

# Cryptographic primitives
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"

# Utilities
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }

[profile.release]
opt-level = 3
lto = true
